# arqf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  gen_zipfian_workload.sh  run_adversarial.sh  run_all.sh  run_expandability.sh  run_tests.sh  run_zipfian.sh  setup_tests.sh
adaptiveqf/: CMakeLists.txt  Makefile  tags  test_range_filter
adaptiveqf/include/: arqf.h  arqf_inmem.hpp  arqf_wt.h  bigint.hpp  gqf.h  gqf_file.h  gqf_int.h  splinter_util.h
adaptiveqf/other_filters/cqf/src/: gqf.c
adaptiveqf/src/: .gqf.c.swp  arqf.c  arqf_inmem.cc  arqf_wt.c  arqf_wt.cc  gqf.c  gqf_file.c  hash_table.c  splinter_util.c  test_ext_throughput.cc
adaptiveqf/test/: test_encoding.c  test_range_filter.c  test_throughput.c
bench/: CMakeLists.txt  bench_template.hpp  bench_utils.hpp  reproducibility.md  workload_gen.cpp  zipf.c  zipf.h
bench/filters/Memento/: CMakeLists.txt  README.md
bench/filters/Memento/examples/: CMakeLists.txt  simple.cpp
bench/filters/Memento/include/: memento.h  memento_int.h
bench/filters/Memento/src/: hashutil.c  memento.c
bench/filters/Memento/tests/: CMakeLists.txt  tests.cpp
bench/filters_benchmark/: bench_adaptive.cpp  bench_adaptive_arqf.cpp  bench_adaptive_arqf_inmem.cpp  bench_adaptive_arqf_splinterdb.cpp  bench_adaptive_arqf_wiredtiger.cpp  bench_arqf.cpp  bench_bucketing.cpp  bench_expandable_adaptive_arqf_inmem.cpp  bench_expandable_adaptive_arqf_splinterdb.cpp  bench_expandable_adaptive_arqf_wiredtiger.cpp  bench_expandable_arqf.cpp  bench_expandable_memento.cpp  bench_grafite.cpp  bench_memento.cpp  bench_proteus.cpp  bench_rencoder.cpp  bench_rosetta.cpp  bench_snarf.cpp  bench_surf.cpp
bench/scripts/: data_explorer.ipynb  evaluate_fpr.py  execute_tests.sh  gen_adaptivity_workload.sh  gen_adversarial_workload.sh  gen_expandability_workload.sh  gen_fpr_workload.sh  gen_mixed_workload.sh  gen_uniform_workload.sh  gen_zipfian_workload.sh  generate_adversarial_datasets.sh  generate_datasets.sh  graphs.ipynb  perf_fpr.sh  run_adversarial.sh  run_adversarial_16.sh  run_adversarial_20bpk.sh  run_expandability.sh  run_fpr.sh  run_inserts.sh  run_mixed.sh  run_zipfian.sh  test.py
bench/splinterdb/: bench_splinterdb.cpp
